--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,10 @@
   "name": "lorcana-learner",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "start": "ts-node-dev src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,11 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^2.0.0"
   }
 }
