--- a/lorcana-learner/package.json
+++ b/lorcana-learner/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "webpack-dev-server --config=config/webpack.dev.js",
     "build": "webpack --config=config/webpack.dev.js",
-    "dev": "nodemon --watch './server/**/*.ts' --exec 'ts-node-dev --respawn ./server/main.ts'"
+    "dev": "nodemon --watch './src/**/*.ts' --exec 'ts-node-dev --respawn ./src/main.ts'",
+    "test": "ts-node-dev --respawn ./server/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,6 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "html-loader": "^5.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^7.2.1",
@@ -25,7 +25,9 @@
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-typescript": "^7.24.1",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.1",
+    "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "nodemon": "^3.1.0",
     "style-loader": "^4.0.0",
