--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config=config/webpack.dev.js",
-    "build": "webpack --config=config/webpack.dev.js",
-    "dev": "nodemon --watch './src/**/*.ts' --exec 'ts-node-dev --respawn ./src/main.ts'",
-    "test": "ts-node-dev --respawn ./server/main.ts"
+    "start": "ts-node ./server/main.ts",
+    "dev": "ts-node-dev --respawn ./server/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +27,6 @@
     "css-loader": "^7.1.1",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "nodemon": "^3.1.0",
     "style-loader": "^4.0.0",
     "ts-node-dev": "^2.0.0"
   }
