--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./server/main.ts",
-    "dev": "ts-node-dev --respawn ./server/main.ts"
+    "start": "ts-node ./server/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -27,7 +26,6 @@
     "css-loader": "^7.1.1",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "style-loader": "^4.0.0",
-    "ts-node-dev": "^2.0.0"
+    "style-loader": "^4.0.0"
   }
 }
