--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^7.1.1",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "ts-node": "^10.9.2"
   }
 }
